package com.qr_restaurant.table.enums;

public enum DiningStatus {
    ACTIVE,
    WAITING_FOR_CHECK,
    COMPLETED,
}
