package com.qr_restaurant.table.enums;

public enum TableStatus {
    AVAILABLE,
    OCCUPIED,
    WAITING_FOR_CLEANING,
}
